Correct margin and alignment of hotel containers

--- a/src/style_components/hospedaje.css
+++ b/src/style_components/hospedaje.css
@@ -1,9 +1,10 @@
 .hospedaje-container {
   width: 100%;
+  padding: 2% 5%;
   margin: 0 auto;
 }
 .hospedaje-header {
-  padding: 2% 5%;
+  padding: 1% 0;
   margin: 0 auto;
 }
 .hospedaje-h1 {
@@ -19,9 +20,6 @@
 
 /*Responsive mobile - Hospedaje*/
 @media all and (min-width: 320px) and (max-width: 480px) {
-  .hospedaje-header {
-    padding: 5% 5% 2% 5%;
-  }
   .hospedaje-h1 {
     font-size: 22px;
   }
